done with mobile responsive

--- a/Index.html
+++ b/Index.html
@@ -63,16 +63,22 @@
                             </div>
                         </div>
                         <div class="col-1-of-2">
-                            <h2 class="hero-first-heading">Fast Food Burger</h2>
-                            <h1 class="hero-second-heading">BEST <br>BURGERS</h1>
-                            <p class="hero-para">Indugle in the ultimate burger experince! our fast food
-                                burger are crafted to perfection, delivring unbeatable
-                                test with every bite. join us for a feast that will leave
-                                your test buds creaving more.
-                            </p>
-                            <a href="#" class="btn-slide-1"><i class="fa-solid fa-person-biking bike"></i>
-                                order now
-                            </a>
+                            <div>
+                               <div class="hero-textbox">
+                                    <h2 class="hero-first-heading">Fast Food Burger</h2>
+                                    <h1 class="hero-second-heading">BEST <br>BURGERS</h1>
+                                    <p class="hero-para">Indugle in the ultimate burger experince! our fast food
+                                        burger are crafted to perfection, delivring unbeatable
+                                        test with every bite. join us for a feast that will leave
+                                        your test buds creaving more.
+                                    </p>
+                               </div>
+                                <div class="hero-btn-box">
+                                    <a href="#" class="btn-slide-1"><i class="fa-solid fa-person-biking bike"></i>
+                                        order now
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -94,16 +100,22 @@
                             </div>
                         </div>
                         <div class="col-1-of-2">
-                            <h2 class="hero-first-heading">Testy Burger</h2>
-                            <h1 class="hero-second-heading">TOP <br>BURGERS</h1>
-                            <p class="hero-para">Indugle in the ultimate burger experince! our fast food
-                                burger are crafted to perfection, delivring unbeatable
-                                test with every bite. join us for a feast that will leave
-                                your test buds creaving more.
-                            </p>
-                            <a href="#" class="btn-slide-2"><i class="fa-solid fa-person-biking bike"></i>
-                                order now
-                            </a>
+                            <div class="hero-btn-box">
+                              <div class="hero-textbox">
+                                    <h2 class="hero-first-heading">Testy Burger</h2>
+                                    <h1 class="hero-second-heading">TOP <br>BURGERS</h1>
+                                    <p class="hero-para">Indugle in the ultimate burger experince! our fast food
+                                        burger are crafted to perfection, delivring unbeatable
+                                        test with every bite. join us for a feast that will leave
+                                        your test buds creaving more.
+                                    </p>
+                                </div>
+                                <div class="hero-btn-box">
+                                    <a href="#" class="btn-slide-2"><i class="fa-solid fa-person-biking bike"></i>
+                                        order now
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="custom-shape-divider-bottom-1725362557">
@@ -267,7 +279,7 @@
                
                 <div class="advert-box-container">
                     <div class="advert-box-image-container">
-                        <img src="images/b4.png" alt="">
+                        <img src="images/b4.png" alt="" class="b4">
                     </div>
                     <div class="advert-box">
                         <h3 class="advert-box-heading">Beefy Bite</h3>
@@ -570,11 +582,7 @@
         <h6 class="copyright">Copyright © 2024 Christopher Nwaneri All rights reserved</h6>
     </footer>
 
-    <!-- <i class="fa-solid fa-phone"></i> -->
-    <!-- <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-web-awesome"></i> -->
+    
     <script src="script/swiper-bundle.min.js"></script>
     <script src="script/script.js"></script>
 </body>
